welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.error
indexOfMaxValue:9: error: type mismatch;
 found   : Unit
 required: Int
	for (i <- 0 to n-1){
               ^